done meeting lecture 2
