# internal/api/api.go
@@ -7,7 +7,9 @@ import (
 	"github.com/gin-gonic/gin"
 	_ "github.com/nguyendong2003/bookmark-management/docs"
 	"github.com/nguyendong2003/bookmark-management/internal/handler"
+	"github.com/nguyendong2003/bookmark-management/internal/repository"
 	"github.com/nguyendong2003/bookmark-management/internal/service"
+	"github.com/redis/go-redis/v9"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -17,33 +19,44 @@ type Engine interface {
 	ServeHTTP(w http.ResponseWriter, r *http.Request)
 }
 
-type api struct {
-	app *gin.Engine
-	cfg *Config
+type engine struct {
+	app         *gin.Engine
+	cfg         *Config
+	redisClient *redis.Client
 }
 
-func NewEngine(cfg *Config) Engine {
-	a := &api{
-		app: gin.New(),
-		cfg: cfg,
+func NewEngine(cfg *Config, redisClient *redis.Client) Engine {
+	e := &engine{
+		app:         gin.New(),
+		cfg:         cfg,
+		redisClient: redisClient,
 	}
 
-	a.registerEndpoint()
+	e.initRoutes()
 
-	return a
+	return e
 }
 
-func (a *api) Start() error {
-	return a.app.Run(fmt.Sprintf(":%s", a.cfg.AppPort))
+func (e *engine) Start() error {
+	return e.app.Run(fmt.Sprintf(":%s", e.cfg.AppPort))
 }
 
-func (a *api) ServeHTTP(w http.ResponseWriter, r *http.Request) {
-	a.app.ServeHTTP(w, r)
+func (e *engine) ServeHTTP(w http.ResponseWriter, r *http.Request) {
+	e.app.ServeHTTP(w, r)
 }
 
-func (a *api) registerEndpoint() {
+func (e *engine) initRoutes() {
+	// create handlers
 	passwordService := service.NewPassword()
 	passwordHandler := handler.NewPassword(passwordService)
-	a.app.GET("/gen-pass", passwordHandler.GenPass)
-	a.app.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	// urlstorage handler
+	urlStorage := repository.NewURLStorage(e.redisClient)
+	shortenURLService := service.NewShortenURL(urlStorage, passwordService)
+	shortenURLHandler := handler.NewShortenURL(shortenURLService)
+
+	// register handlers to endpoints
+	e.app.GET("/gen-pass", passwordHandler.GenPass)
+	e.app.POST("/link/shorten", shortenURLHandler.ShortenURL)
+	e.app.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
